--- a/src/Components/contact/Contact.css
+++ b/src/Components/contact/Contact.css
@@ -1,5 +1,27 @@
+*,
+*:before,
+*:after {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 .contact-container {
   height: 100vh;
   background-color: yellow;
+  min-height: 750px;
+  font-family: Michroma;
+}
+
+.contact-container .contact-header {
+  text-transform: uppercase;
+  margin: auto auto auto 3vw;
+  padding: 0;
+  color: var(--primary-color);
+  font-size: 5.5em;
+  font-weight: normal;
+  letter-spacing: .1em;
+  text-shadow: 7px 8px rgba(0, 0, 0, 0.137);
 }
 /*# sourceMappingURL=Contact.css.map */
