--- a/src/Components/heroSection/HeroSection.scss
+++ b/src/Components/heroSection/HeroSection.scss
@@ -42,9 +42,7 @@
             .top-nametag-box {
                 
                 border-left: 5px solid black;
-                
-                
-                
+
                 .name-tag {
                     width: 20vw;
                     text-align: center;
@@ -58,22 +56,24 @@
         .heroContent {
             display: flex;
             min-height: 718px;
+            overflow: hidden;
         
 
             .hero-left {
                 // background-color: aqua;
                 height: 94.5vh;
-                min-height: 700px;
-                max-height: 705px;
+                //min-height: 700px;
+                //max-height: 705px;
                 width: 60vw;
                 border-right: 5px solid black;
                 
                 .hero-left-top {
-                    height: 65%;
+                    //height: 65%;
                     min-height: 425.5px;
-
+                    // background-color: magenta;
+                    
                     .hero-name {
-                        margin: 5vh 0 5vh 0;
+                        margin: 15vh 0 8vh 0;
                         padding: 0;
                         font-family: subway-new-york-sc, sans-serif;
                         font-weight: 400;
@@ -96,18 +96,21 @@
                 }
 
                 .hero-left-bottom {
-                    min-height: 150px;
+                    // min-height: 150px;
                     max-height: 200px;
                     border-top: 5px black solid;
                     display: flex;
                     justify-content: space-around;
+                    
+                    
                     // background-color: purple;
                     
                     .node-img {
                         min-height: 131px;
                         height:20vh;
                         max-height:172px;
-                        margin: auto auto;
+                        margin: 0 auto;
+                        position: relative;
                         
                     }
                     .react-img {
@@ -117,15 +120,15 @@
                         height: 12vw;
                         max-width: 200px;
                         max-height:200px;
-                        margin: auto auto;
+                        margin: -2vh auto;
                     }
-                    .aws-img {
+                    .vercel-img {
                         min-height: 205px;
                         min-width:308px;
                         height:15vw;
                         max-height:205px;
                         max-width: 308px;
-                        margin: auto auto;
+                        margin: -2vh auto;
                         padding: 0;
                     }
                 }
