--- a/src/Components/heroSection/HeroSection.css
+++ b/src/Components/heroSection/HeroSection.css
@@ -190,7 +190,7 @@
 }
 
 .hero-container .heroContent .hero-right .hero-right-button-container .cta-hero-right-subtext {
-  font-size: 1.4em;
+  font-size: 1.4vw;
   letter-spacing: .15em;
 }
 /*# sourceMappingURL=HeroSection.css.map */
