--- a/src/Components/heroSection/HeroSection.scss
+++ b/src/Components/heroSection/HeroSection.scss
@@ -189,7 +189,7 @@
                         box-shadow: 20px 20px 6px rgba(0, 0, 0, 0.5);
                     }
                     .cta-hero-right-subtext {
-                        font-size: 1.4em;
+                        font-size: 1.4vw;
                         letter-spacing: .15em;
                     }
                 }
