--- a/src/Components/portfolio/Portfolio.scss
+++ b/src/Components/portfolio/Portfolio.scss
@@ -15,6 +15,9 @@
     font-family: Michroma;
     border-bottom: solid black 5px;
     overflow: hidden;
+    background-repeat: no-repeat;
+    background-size: 50%;
+    background-position: 80% 20%;
 
     .portfolio-header {
         text-transform: uppercase;
@@ -31,49 +34,80 @@
         margin: auto;
         width: 95%;
         height: 80%;
-        background-color: chocolate;
+        // background-color: chocolate;
         display: flex;
+        
 
         .portfolio-left {
             width: 40%;
             height: 100%;
             
-            background-color: aqua;
-
-            .project-list-container {
-                margin: 4vh auto;                
-                width: 80%;
-                height: 55%;
-                //background-color: grey;
-                ul {
-                    list-style: none;
-                    display: grid;
-                    grid-template-columns: 50% 50%;
-                    grid-template-rows: 50% 50%;
-                    grid-column-gap: 0px;
-                    grid-row-gap: 10px;
-
-                }
-            }
+            // background-color: aqua;
 
             .portfolio-projects-header {
                 color: var(--primary-color);
                 text-align: center;
             }
 
+            .project-list-container {
+                margin: 4vh auto 0 auto;                
+                width: 80%;
+                height: 55%;
+                // background-color: grey;
+                ul {
+                    font-size: 1vw;
+                    list-style: none;
+                    display: grid;
+                    grid-template-columns: 48.5% 48.5%;
+                    grid-template-rows: 55% 55%;
+                    grid-column-gap: 1.3vw;
+                    grid-row-gap: .5vw;
+                    height: 75%;
+                    width: 100%;
+
+                }
+            }
+            .contact-me-cta {
+                margin: auto;
+                text-align: center;
+                font-size: 1.2vw;
+
+
+                .portfolio-contactme-wordhype{
+                    color: var(--primary-color);
+                }
+
+            }
+
             img {
                 width: 50%;
-                margin: auto;
+                height: 30%;
+                margin-left: 25%;
             }
         }
 
         .portfolio-right {
             width: 60%;
             height: 100%;
-            background-color: green;
+            // background-color: green;
             
             .portfolio-preview-container {
-                height: 75%;
+                height: 65%;
+                
+
+                .preview-image {
+                    margin: 0 10% 0 0%;
+                    height: 100%;
+                    width: 90%; 
+                }
+            }
+
+            .site-des-container {
+                margin-top: 5%;
+                padding:1vw;
+                height: 30%;
+                border: solid black 3px;
+                font-size: .75vw;
             }
         }
 
