--- a/src/Components/portfolio/Projects.css
+++ b/src/Components/portfolio/Projects.css
@@ -8,10 +8,19 @@
 }
 
 .project-icon-container {
-  width: 14vw;
-  height: 7vw;
-  background-color: white;
+  width: 100%;
+  height: 100%;
   position: relative;
   overflow: hidden;
+}
+
+.project-icon-container .icons {
+  width: 100%;
+  height: 80%;
+  background-size: 100%;
+  background-color: white;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  border: solid black 2px;
 }
 /*# sourceMappingURL=Projects.css.map */
