--- a/src/Components/portfolio/Projects.scss
+++ b/src/Components/portfolio/Projects.scss
@@ -11,10 +11,21 @@
 
 
 .project-icon-container {
-    width: 14vw;
-    height: 7vw;
-    background-color: white;
+    width: 100%;
+    height: 100%;
+    // background-color: white;
     position: relative;
     overflow: hidden;
     
+    .icons {
+      width: 100%;
+      height: 80%;
+      background-size: 100%;
+      background-color: white;
+      background-repeat: no-repeat;
+      background-position: 50% 50%;
+      border: solid black 2px;
+      
+      
+    }
 }
