--- a/src/Components/portfolio/Portfolio.scss
+++ b/src/Components/portfolio/Portfolio.scss
@@ -13,11 +13,11 @@
     min-height: 750px;
     // background-color: tan;
     font-family: Michroma;
-    border-bottom: solid black 5px;
+    // border-bottom: solid black 5px;
     overflow: hidden;
     background-repeat: no-repeat;
     background-size: 50%;
-    background-position: 80% 20%;
+    background-position: 80% 12.5%;
 
     .portfolio-header {
         text-transform: uppercase;
