--- a/src/Components/portfolio/Projects.scss
+++ b/src/Components/portfolio/Projects.scss
@@ -14,18 +14,76 @@
     width: 100%;
     height: 100%;
     // background-color: white;
-    position: relative;
     overflow: hidden;
+    position: relative;
+    z-index: 0;
     
     .icons {
       width: 100%;
-      height: 80%;
-      background-size: 100%;
+      height: 100%;
+      background-size:cover;
       background-color: white;
       background-repeat: no-repeat;
       background-position: 50% 50%;
       border: solid black 2px;
-      
+      cursor:pointer;
+      position: relative;
+      z-index: 1;
       
     }
+
+    .project-title-overlay {
+      position: absolute;
+      bottom: 0px;
+      height: 100%;
+      width: 100%;
+      z-index: 2;
+      background-image: linear-gradient(rgba(255,0,0,0) 1%, black 99%);
+
+
+    }
+
+    .project-title {
+      position: absolute;
+      padding: 1% 3%;
+      height: 20%;
+      width: 100%;
+      z-index: 3;
+      bottom: 0px;
+      color: white;
+      font-size: .9em;
+
+      
+    }
+
+    
+}
+
+
+
+@keyframes project-title-overlay-change {
+  0%   {opacity: 70% }
+  100% {opacity: 100% }
+}
+@keyframes project-title-icon-change {
+  0%   {box-shadow: 0px 0px 0px 0px var(--primary-color)}
+  50% {box-shadow: 0px 0px 20px 5px var(--primary-color)}
+  100% {box-shadow: 0px 0px 40px 10px var(--primary-color)}
+}
+
+
+.selected {
+      // background-color: aqua;
+      box-shadow: 0px 0px 40px 10px var(--primary-color);
+      animation-name: project-title-icon-change;
+      animation-duration: .5s;
+      animation-timing-function: linear;
+
+      .project-title-overlay {
+        animation-name: project-title-overlay-change;
+        animation-duration: .5s;
+        animation-timing-function: ease;
+        background-image: linear-gradient(175deg, rgba(255,0,0,0) 70%, var(--primary-color) 30%);
+        opacity: 100%;
+      }
 }
